Refactored code to prepare for release

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,12 @@ project(TomoSAM)
 
 #-----------------------------------------------------------------------------
 # Extension meta-information
-set(EXTENSION_HOMEPAGE "https://github.com/fsemerar/TomoSAM")
-set(EXTENSION_CATEGORY "Segmentations")
-set(EXTENSION_CONTRIBUTORS "Federico Semeraro (NASA); Alexandre Quintart (NASA); Sergio Fraile Izquierdo (NASA); Joseph Ferguson (Stanford)")
+set(EXTENSION_HOMEPAGE "https://github.com/fsemerar/SlicerTomoSAM")
+set(EXTENSION_CATEGORY "Segmentation")
+set(EXTENSION_CONTRIBUTORS "Federico Semeraro (NASA); Alexandre Quintart (NASA); Sergio Fraile Izquierdo (NASA); Joseph Ferguson (Stanford University)")
 set(EXTENSION_DESCRIPTION "TomoSAM")
-set(EXTENSION_ICONURL "")
-set(EXTENSION_SCREENSHOTURLS "")
+set(EXTENSION_ICONURL "https://raw.githubusercontent.com/fsemerar/SlicerTomoSAM/main/TomoSAM/Resources/Icons/tomosam.png")
+set(EXTENSION_SCREENSHOTURLS "https://raw.githubusercontent.com/fsemerar/SlicerTomoSAM/main/TomoSAM/Resources/Screenshots/tomosam_screenshot_1.png")
 set(EXTENSION_DEPENDS "NA") # Specified as a list or "NA" if no dependencies
 
 #-----------------------------------------------------------------------------
