--- a/Embeddings/env/environment_cpu.yml
+++ b/Embeddings/env/environment_cpu.yml
@@ -1,15 +1,12 @@
 name: tomosam
 channels:
   - pytorch
-  - nvidia
   - conda-forge
 dependencies:
   - python >=3.7
   - pip
   - pytorch
   - torchvision
-  - pytorch-cuda
   - opencv
   - jupyter
-  - pip:
-    - git+https://github.com/facebookresearch/segment-anything.git
+  - segment-anything
