--- a/Embeddings/env/environment_gpu.yml
+++ b/Embeddings/env/environment_gpu.yml
@@ -1,13 +1,14 @@
 name: tomosam
 channels:
   - pytorch
+  - nvidia
   - conda-forge
 dependencies:
   - python >=3.7
   - pip
   - pytorch
   - torchvision
+  - pytorch-cuda
   - opencv
   - jupyter
-  - pip:
-    - git+https://github.com/facebookresearch/segment-anything.git
+  - segment-anything
