Add missing logic class to package
- Move logic class out of Resources folder
- Do not install anything until the user opens the module

--- a/TomoSAM/CMakeLists.txt
+++ b/TomoSAM/CMakeLists.txt
@@ -4,6 +4,7 @@ set(MODULE_NAME tomosam)
 #-----------------------------------------------------------------------------
 set(MODULE_PYTHON_SCRIPTS
   ${MODULE_NAME}.py
+  tomosamLib/tomosamLogic.py
   )
 
 set(MODULE_PYTHON_RESOURCES
